--- a/tedbottompicker/src/main/res/layout/tedbottompicker_content_view.xml
+++ b/tedbottompicker/src/main/res/layout/tedbottompicker_content_view.xml
@@ -117,7 +117,7 @@
             />
     -->
 
-    <androidx.drawerlayout.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rc_gallery"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
